Moved common test arrangement into base class. BUnit tests for Event page components.

--- a/src/Churchee.Module.Events/Areas/Website/Pages/Events/Edit.razor
+++ b/src/Churchee.Module.Events/Areas/Website/Pages/Events/Edit.razor
@@ -24,7 +24,7 @@
 
                 <RadzenStack Orientation="Orientation.Horizontal" JustifyContent="JustifyContent.End">
                     <RadzenButton Text="Cancel" Click="CancelForm" ButtonStyle="ButtonStyle.Danger" ButtonType="ButtonType.Button" />
-                    <RadzenButton Disabled="_formInvalid" ButtonStyle="ButtonStyle.Primary" ButtonType="ButtonType.Submit">Save</RadzenButton>
+                    <RadzenButton Disabled="_formInvalid" ButtonStyle="ButtonStyle.Success" ButtonType="ButtonType.Submit">Submit</RadzenButton>
                 </RadzenStack>
 
             </div>
