--- a/src/Churchee.Module.UI/Components/PageName.razor
+++ b/src/Churchee.Module.UI/Components/PageName.razor
@@ -10,11 +10,8 @@
     [Inject]
     private NavigationManager NavigationManager { get; set; } = default!;
 
-
-    // protected override void OnInitialized()
-    // {
-    //     SetDynamic();
-    // }
+    [Inject]
+    private CurrentPage CurrentPage { get; set; } = default!;
 
     protected override void OnParametersSet()
     {
@@ -23,6 +20,7 @@
             SetDynamic();
         }
 
+        CurrentPage.SetCurrentPageName(Name);
     }
 
     private void SetDynamic()
