--- a/src/Churchee.Module.UI/wwwroot/scss/admin.scss
+++ b/src/Churchee.Module.UI/wwwroot/scss/admin.scss
@@ -39,3 +39,21 @@
 .rz-footer:empty {
     padding: 0;
 }
+
+.rz-menu.rz-dash-menu {
+    background: none;
+    margin-top: 0.3rem;
+
+    * {
+        color: #333;
+    }
+
+    .rz-navigation-item {
+        direction: rtl;
+    }
+
+    > li > .rz-navigation-item-wrapper > .rz-navigation-item-link {
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+    }
+}
