Dashboard Stat Permformance Improvements

--- a/src/Churchee.Module.Dashboard/Areas/Dashboard/Index.razor
+++ b/src/Churchee.Module.Dashboard/Areas/Dashboard/Index.razor
@@ -139,7 +139,7 @@
 
     RadzenDataGrid<GetDashboardDataResponseItem> pagesGrid;
 
-    GetDashboardDataResponse data = new();
+    GetDashboardDataResponse data = null;
 
     [Inject]
     private IMediator Mediator { get; set; } = default!;
