- Tidied up naming for Spotify XML classes - Added Cancelation token support to BasePage - Other Minor Improvements

--- a/src/Churchee.Module.Identity/Areas/Configuration/Pages/Contributors/Index.razor
+++ b/src/Churchee.Module.Identity/Areas/Configuration/Pages/Contributors/Index.razor
@@ -18,7 +18,7 @@
 
 @if (data != null)
 {
-    <Grid @ref="dataGrid" TItem="ListContributorsForTenantResponseItem" IsLoading=isLoading Data=data LoadData="@LoadData" ShowEdit="true"></Grid>
+    <Grid TItem="ListContributorsForTenantResponseItem" IsLoading=isLoading Data=data LoadData="@LoadData" ShowEdit="true"></Grid>
 }
 
 @code {
@@ -32,8 +32,6 @@
 
     IEnumerable<ListContributorsForTenantResponseItem> data = default!;
 
-    Grid<ListContributorsForTenantResponseItem> dataGrid;
-
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
@@ -45,9 +43,12 @@
 
     private async Task LoadData()
     {
+        isLoading = true;
 
         var result = await Mediator.Send(new ListContributorsForTenantQuery(), default);
 
         data = result;
+
+        isLoading = false;
     }
 }
