--- a/src/Churchee.Module.Podcasts/Areas/Website/Pages/Podcasts/Index.razor
+++ b/src/Churchee.Module.Podcasts/Areas/Website/Pages/Podcasts/Index.razor
@@ -33,13 +33,14 @@
     {
         isLoading = true;
 
+        var orderBy = string.IsNullOrEmpty(args?.OrderBy) ? "PublishedDate desc" : args.OrderBy;
+
         var result = await Mediator.Send(new GetListingQuery(
                 skip: args?.Skip ?? 0,
                 take: args?.Top ?? 20,
                 searchText: args?.Filter ?? string.Empty,
-                orderBy: args?.OrderBy ?? "PublishedDate desc"), default);
+                orderBy: orderBy), CancellationToken);
 
-        // Perform paging via Skip and Take.
         listingData = result.Data;
 
         isLoading = false;
