--- a/src/Churchee.Module.Site/Areas/Site/Pages/PageTypes/Index.razor
+++ b/src/Churchee.Module.Site/Areas/Site/Pages/PageTypes/Index.razor
@@ -32,7 +32,7 @@
             skip: args?.Skip ?? 0,
             take: args?.Top ?? 20,
             searchText: args?.Filter ?? string.Empty,
-            orderBy: string.IsNullOrEmpty(args?.OrderBy) ? "Name asc" : args?.OrderBy), default);
+            orderBy: string.IsNullOrEmpty(args.OrderBy) ? "Name asc" : args.OrderBy), CancellationToken);
 
         listingData = result.Data;
 
