--- a/src/Churchee.Module.Site/Areas/Site/Pages/Templates/Index.razor
+++ b/src/Churchee.Module.Site/Areas/Site/Pages/Templates/Index.razor
@@ -37,7 +37,7 @@
                 skip: args?.Skip ?? 0,
                 take: args?.Top ?? 20,
                 searchText: args?.Filter ?? string.Empty,
-                orderBy: string.IsNullOrEmpty(args.OrderBy) ? "Location asc" : args.OrderBy), CancellationToken);
+                orderBy: string.IsNullOrEmpty(args?.OrderBy) ? "Location asc" : args.OrderBy), CancellationToken);
 
         listingData = result.Data;
 
