--- a/src/Churchee.Module.Identity/Areas/Profile/Pages/Email.razor
+++ b/src/Churchee.Module.Identity/Areas/Profile/Pages/Email.razor
@@ -60,7 +60,7 @@ else
 
     private ApplicationUser _user;
 
-    private ChangeEmailModel _model = new ChangeEmailModel();
+    private ChangeEmailModel _model = new();
 
     private bool _isLoading = false;
 
